fix textarea shadow on ios

--- a/main/static/styles/main.css
+++ b/main/static/styles/main.css
@@ -983,6 +983,7 @@ button:hover {
     background-color: #fff;
     border: 1px solid #d1d5da;
     border-radius: 2px;
+    -webkit-appearance: none;
 }
 
 .addition-input[type="submit"] {
